fix progress bar overflow wrapping in mobile

--- a/web/saito/css-imports/saito-progress-bar.css
+++ b/web/saito/css-imports/saito-progress-bar.css
@@ -20,6 +20,9 @@
 .saito-progress-bar {
 	color: var(--font-color-progress-bar);
 	text-shadow: var(--text-shadow-progress-bar);	
+	text-wrap: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 @keyframes shimmer {
